--- a/index.html
+++ b/index.html
@@ -1,103 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>One Page Wonder - Start Bootstrap Template</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-            <div class="container px-5">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#!">Sign Up</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Log In</a></li>
-                    </ul>
-                </div>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>One Page Wonder - Start Bootstrap Template</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900"
+        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
+        rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
+
+<body id="page-top"
+    style="background-image: url(assets/img/sea-edge-79ab30e2.png); -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
+
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+        <div class="container px-5">
+            <a class="navbar-brand" href="#page-top">YuriGagarin Team</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
+                    class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#!">Контакты</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#!">Оставить заявку</a></li>
+                </ul>
             </div>
-        </nav>
-        <!-- Header-->
-        <header class="masthead text-center text-white">
-            <div class="masthead-content">
-                <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">One Page Wonder</h1>
-                    <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
-                </div>
+        </div>
+    </nav>
+    <!-- Header-->
+    <header class="masthead text-center text-white"
+        style="background-image: url(assets/img/head12345.png); height: 750px; margin-left: auto; width: auto; margin-right: auto; margin-top: 67px;">
+        <!-- <div class="col-lg-6 order-lg-1">
+            <div class="p-4">
+                <p style="color: black; font-family: 'Comic Sans MS', cursive, sans-serif; width: 450px; font-size: x-large; margin-left: 100px;">Так, так… кто тут у нас такой? Ну привет сладенький, дай угадаю. Что то
+                    случилось и ты не знаешь что с этим делать… Поверь мне ты не одинок, в мире дофигища людей с такой
+                    же проблемой, но давай разберемся с твоей. </p>
             </div>
-            <div class="bg-circle-1 bg-circle"></div>
-            <div class="bg-circle-2 bg-circle"></div>
-            <div class="bg-circle-3 bg-circle"></div>
-            <div class="bg-circle-4 bg-circle"></div>
-        </header>
-        <!-- Content section 1-->
-        <section id="scroll">
-            <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/01.jpg" alt="..." /></div>
-                    </div>
-                    <div class="col-lg-6 order-lg-1">
-                        <div class="p-5">
-                            <h2 class="display-4">For those about to rock...</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-                        </div>
+        </div> -->
+    </header>
+    <!-- Content section 1-->
+    <section id="scroll">
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <img class="img-fluid" src="assets/img/deadpool_2.png" alt="..." />
+                    <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
+                        <h2 class="display-4" style="text-align: center;">Вот это поворот...</h2>
+                        <p style="font-size: x-large; text-align: center;"> Божечки-кошечки, да ты же отстрелил ему
+                            надежду на будущее, а ведь это уже сойдет за тяжкие
+                            телесные</p>
                     </div>
                 </div>
-            </div>
-        </section>
-        <!-- Content section 2-->
-        <section>
-            <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/02.jpg" alt="..." /></div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="p-5">
-                            <h2 class="display-4">We salute you!</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-                        </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <iframe
+                            src="https://web.powerva.microsoft.com/environments/90d71fe9-1ad0-4492-8278-cd9c9d88ecfa/bots/new_bot_27a9b9d2bec944fa812677ad8353b0d0/webchat"
+                            frameborder="0" style="width: 450px; height: 600px; background-color: white;"
+                            class="img-fluid"></iframe>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- Content section 3-->
-        <section>
-            <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/03.jpg" alt="..." /></div>
-                    </div>
-                    <div class="col-lg-6 order-lg-1">
-                        <div class="p-5">
-                            <h2 class="display-4">Let there be rock!</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-                        </div>
+        </div>
+    </section>
+    <!-- Content section 2-->
+    <section>
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6">
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/dp4.png" alt="..." /></div>
+                    <!-- <iframe
+                        src="https://web.powerva.microsoft.com/environments/90d71fe9-1ad0-4492-8278-cd9c9d88ecfa/bots/new_bot_27a9b9d2bec944fa812677ad8353b0d0/webchat"
+                        frameborder="0" style="width: 100%; height: 100%;"></iframe> -->
+                </div>
+                <div class="col-lg-6">
+                    <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
+                        <h2 class="display-4" style="text-align: center;">Все под котролем ...</h2>
+                        <p style="font-size: x-large; text-align: center;">Так, спокойно! Я же здесь не просто так. А
+                            все-таки Агент, почти как Смит. Давай посмотрим,
+                            что тут у нас по букве закона. А там будет видно есть у тебя шансы или сразу надо валить из
+                            страны...</p>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- Footer-->
-        <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2022</p></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+        </div>
+    </section>
+    <!-- Content section 3-->
+    <section>
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <div class="col-3 order-lg-2">
+                    <div class="p-5" style="width: 600px;">
+                        <iframe
+                            src="https://web.powerva.microsoft.com/environments/90d71fe9-1ad0-4492-8278-cd9c9d88ecfa/bots/new_bot_27a9b9d2bec944fa812677ad8353b0d0/webchat"
+                            frameborder="0" style="width: 450px; height: 600px; background-color: white;"
+                            class="img-fluid"></iframe>
+                    </div>
+                </div>
+                <div class="col-6 order-lg-1">
+                    <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
+                        <h2 class="display-4" style="text-align: center;">Есть варианты...</h2>
+                        <p style="font-size: x-large; text-align: center;">Для начала давай укажи на обстоятельства и
+                            место. Я покажу тебе варианты как себя нужно
+                            вести, а если вопросы останутся, то выберем тебе юриста для консультации по подходящей
+                            практике. Есть тут у меня один кореш. Когда у меня нашли…. В общем помог он мне знатно!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
+                        <p style="font-size: x-large; text-align: center;">Так, смотри а вот и практика судебная
+                            нашлась! Да и история точ в точ как у тебя! Ну что, теперь ты знаешь по какому сценарию тебе
+                            надо идти, когда с дядей полицейским будешь общаться???</p>
+
+                    </div>
+                    <img class="img-fluid" src="assets/img/dp6.png" alt="..." />
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <iframe
+                            src="https://web.powerva.microsoft.com/environments/90d71fe9-1ad0-4492-8278-cd9c9d88ecfa/bots/new_bot_27a9b9d2bec944fa812677ad8353b0d0/webchat"
+                            frameborder="0" style="width: 450px; height: 600px; background-color: white;"
+                            class="img-fluid"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section style="margin-top: 50px;">
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
+                        <p style="font-size: x-large; text-align: center;">Да ты ж мой ангелок!!! Вот и подобрали тебе
+                            практику и специалиста. Выглядит все просто чудесно, как буд то шел ты с букетом цветов, а
+                            не с пистолетом травмат. Главное что ты в курсе как себя нужно вести и что говорить.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <img class="img-fluid" style="align-self: center; width: auto; height: auto;"
+                        src="assets/img/dp9.png" alt="..." />
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Footer-->
+    <footer class="py-5 bg-black">
+        <div class="container px-5">
+            <p class="m-0 text-center text-white small">Copyright &copy; LawyerChatBot2022</p>
+        </div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+</body>
+
 </html>
