--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <!-- Header-->
     <header class="masthead text-center text-white"
-        style="background-image: url(assets/img/head12345.png); height: 750px; margin-left: auto; width: auto; margin-right: auto; margin-top: 67px;">
+        style="background-image: url(assets/img/head123456.png); height: 750px; margin-left: auto; width: auto; margin-right: auto; margin-top: 67px;">
         <!-- <div class="col-lg-6 order-lg-1">
             <div class="p-4">
                 <p style="color: black; font-family: 'Comic Sans MS', cursive, sans-serif; width: 450px; font-size: x-large; margin-left: 100px;">Так, так… кто тут у нас такой? Ну привет сладенький, дай угадаю. Что то
@@ -124,7 +124,7 @@
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
                         <p style="font-size: x-large; text-align: center;">Так, смотри а вот и практика судебная
-                            нашлась! Да и история точ в точ как у тебя! Ну что, теперь ты знаешь по какому сценарию тебе
+                            нашлась! Да и история точь в точь как у тебя! Ну что, теперь ты знаешь по какому сценарию тебе
                             надо идти, когда с дядей полицейским будешь общаться???</p>
 
                     </div>
@@ -147,7 +147,7 @@
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
                         <p style="font-size: x-large; text-align: center;">Да ты ж мой ангелок!!! Вот и подобрали тебе
-                            практику и специалиста. Выглядит все просто чудесно, как буд то шел ты с букетом цветов, а
+                            практику и специалиста. Выглядит все просто чудесно, как-будто шел ты с букетом цветов, а
                             не с пистолетом травмат. Главное что ты в курсе как себя нужно вести и что говорить.</p>
                     </div>
                 </div>
