--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
         style="background-image: url(assets/img/head123456.png); height: 750px; margin-left: auto; width: auto; margin-right: auto; margin-top: 67px;">
         <!-- <div class="col-lg-6 order-lg-1">
             <div class="p-4">
-                <p style="color: black; font-family: 'Comic Sans MS', cursive, sans-serif; width: 450px; font-size: x-large; margin-left: 100px;">Так, так… кто тут у нас такой? Ну привет сладенький, дай угадаю. Что то
-                    случилось и ты не знаешь что с этим делать… Поверь мне ты не одинок, в мире дофигища людей с такой
-                    же проблемой, но давай разберемся с твоей. </p>
+                <p style="color: black; font-family: 'Comic Sans MS', cursive, sans-serif; width: 450px; font-size: x-large; margin-left: 100px;">
+				Так-так... Кто тут у нас такой? Ну привет, сладенький! 
+				Дай угадаю, что-то случилось, и ты не знаешь, что с этим делать?
+				Поверь мне, ты не одинок, в мире дофигища людей с такой же проблемой!
+				Но давай разберемся с твоей...</p>
             </div>
         </div> -->
     </header>
@@ -56,9 +58,9 @@
                     <img class="img-fluid" src="assets/img/deadpool_2.png" alt="..." />
                     <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
                         <h2 class="display-4" style="text-align: center;">Вот это поворот...</h2>
-                        <p style="font-size: x-large; text-align: center;"> Божечки-кошечки, да ты же отстрелил ему
-                            надежду на будущее, а ведь это уже сойдет за тяжкие
-                            телесные</p>
+                        <p style="font-size: x-large; text-align: center;">
+                            Божечки-кошечки, да ты же отстрелил ему надежду на будущее!
+                            А ведь это уже сойдет за тяжкие телесные!</p>
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
@@ -84,11 +86,11 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
-                        <h2 class="display-4" style="text-align: center;">Все под котролем ...</h2>
-                        <p style="font-size: x-large; text-align: center;">Так, спокойно! Я же здесь не просто так. А
-                            все-таки Агент, почти как Смит. Давай посмотрим,
-                            что тут у нас по букве закона. А там будет видно есть у тебя шансы или сразу надо валить из
-                            страны...</p>
+                        <h2 class="display-4" style="text-align: center;">Все под контролем...</h2>
+                        <p style="font-size: x-large; text-align: center;">
+                            Так, спокойно! Я же здесь не просто так. Я все-таки Агент, почти как Смит.
+                            Давай посмотрим, что тут у нас по букве закона. А там будет видно, есть у тебя шансы, или
+                            лучше сразу валить из страны...</p>
                     </div>
                 </div>
             </div>
@@ -109,10 +111,11 @@
                 <div class="col-6 order-lg-1">
                     <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
                         <h2 class="display-4" style="text-align: center;">Есть варианты...</h2>
-                        <p style="font-size: x-large; text-align: center;">Для начала давай укажи на обстоятельства и
-                            место. Я покажу тебе варианты как себя нужно
-                            вести, а если вопросы останутся, то выберем тебе юриста для консультации по подходящей
-                            практике. Есть тут у меня один кореш. Когда у меня нашли…. В общем помог он мне знатно!</p>
+                        <p style="font-size: x-large; text-align: center;">
+                            Для начала давай укажем обстоятельства и место.
+                            Затем я покажу тебе варианты, как себя нужно вести, а если вопросы останутся, то выберем
+                            тебе юриста для консультации по подходящей практике.
+                            Есть тут у меня один кореш. Когда у меня нашли... В общем, помог он мне знатно!</p>
                     </div>
                 </div>
             </div>
@@ -123,9 +126,11 @@
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
-                        <p style="font-size: x-large; text-align: center;">Так, смотри а вот и практика судебная
-                            нашлась! Да и история точь в точь как у тебя! Ну что, теперь ты знаешь по какому сценарию тебе
-                            надо идти, когда с дядей полицейским будешь общаться???</p>
+                        <p style="font-size: x-large; text-align: center;">
+                            Так, смотри, а вот и судебная практика нашлась!
+                            Да и история точь-в-точь как у тебя!
+                            Ну что, теперь ты знаешь, по какому сценарию тебе надо идти, когда с дядей полицейским
+                            будешь общаться???</p>
 
                     </div>
                     <img class="img-fluid" src="assets/img/dp6.png" alt="..." />
@@ -146,9 +151,12 @@
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
-                        <p style="font-size: x-large; text-align: center;">Да ты ж мой ангелок!!! Вот и подобрали тебе
-                            практику и специалиста. Выглядит все просто чудесно, как-будто шел ты с букетом цветов, а
-                            не с пистолетом травмат. Главное что ты в курсе как себя нужно вести и что говорить.</p>
+                        <p style="font-size: x-large; text-align: center;">
+                            Да ты ж мой ангелок!
+                            Вот и подобрали тебе практику и специалиста.
+                            Выглядит все просто чудесно, как будто шел ты с букетом цветов романтическим,
+                            а не с пистолетом травматическим.
+                            Главное, что ты в курсе, как себя нужно вести и что говорить!</p>
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
