--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         </div>
     </nav>
     <!-- Header-->
-    <header class="masthead text-center text-white"
-        style="background-image: url(assets/img/head123456.png); height: 750px; margin-left: auto; width: auto; margin-right: auto; margin-top: 67px;">
+    <header class="masthead text-center text-white" style="background-image: url(assets/img/head12345.png); background-size: cover; height: 100%; width: 100%; object-fit: contain; margin-left: auto;  margin-right: auto; margin-top: 67px;">
         <!-- <div class="col-lg-6 order-lg-1">
             <div class="p-4">
                 <p style="color: black; font-family: 'Comic Sans MS', cursive, sans-serif; width: 450px; font-size: x-large; margin-left: 100px;">
@@ -100,15 +99,15 @@
     <section>
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
-                <div class="col-3 order-lg-2">
-                    <div class="p-5" style="width: 600px;">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
                         <iframe
                             src="https://web.powerva.microsoft.com/environments/90d71fe9-1ad0-4492-8278-cd9c9d88ecfa/bots/new_bot_27a9b9d2bec944fa812677ad8353b0d0/webchat"
                             frameborder="0" style="width: 450px; height: 600px; background-color: white;"
                             class="img-fluid"></iframe>
                     </div>
                 </div>
-                <div class="col-6 order-lg-1">
+                <div class="col-lg-6 order-lg-1">
                     <div class="p-5" style="background: rgba(255, 255, 255, 0.25);">
                         <h2 class="display-4" style="text-align: center;">Есть варианты...</h2>
                         <p style="font-size: x-large; text-align: center;">
